5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1578_1326.log
== TEST (2019-03-11 19:57:55) 
-- CODE:
(R$: 75,00)
-- ERROR:
File "XXXX", line 1
    (R$: 75,00)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:59:01) 
-- CODE:
("R$: 75,00")
-- ERROR:
File "XXXX", line 1
    (R$: 75,00)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:59:05) 
-- CODE:
("R$: 75,00")
-- EXECUTION TIME:
0.16836
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:59:47) 
-- CODE:
print ("R$:75,00")
-- OUTPUT:
R$:75,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:59:53) 
-- CODE:
print ("R$:75,00")
-- EXECUTION TIME:
0.116967
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$:75,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:59:55) 
-- CODE:
print ("R$:75,00")
-- OUTPUT:
R$:75,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:00:17) 
-- CODE:
print ("75")
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:00:24) 
-- CODE:
print (75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:00:26) 
-- CODE:
print (75)
-- EXECUTION TIME:
0.203238
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
